<?xml version="1.0"?>
<package format="2">
  <name>terryjr_description</name>
  <version>0.0.0</version>
<description>Description package for Terry Jr.</description>

  <maintainer email="areddy42@umd.edu">Abhi</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roslaunch</depend>
  <depend>xacro</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>rviz</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>effort_controllers</depend>
  <depend>joint_state_controller</depend>

</package>
